# bioSpace

./: .gitignore  BioSpace.hs  Controller.hs  LICENSE  Model.hs  README  bioSpace.cabal  client_session_key.aes
Fields/: ImageUpload.hs  Users.hs
Handler/: Commons.hs  Dashboard.hs  Event.hs  Profile.hs  Project.hs  Root.hs  Wiki.hs
cassius/: default-layout.cassius  event.cassius  events.cassius  grid.cassius  header.cassius  homepage.cassius
config/: Settings.hs  bioSpace.hs  models  routes
hamlet/: createEdit.hamlet  createEdit_divs.hamlet  dashboard.hamlet  default-layout.hamlet  editProfile.hamlet  event.hamlet  events.hamlet  getUsers.hamlet  grid.hamlet  header.hamlet  homepage.hamlet  page.hamlet  people.hamlet  person.hamlet  project.hamlet  projects.hamlet
julius/: event.julius  events.julius  homepage.julius
static/css/: flickr.css  jquery.ui.css
static/js/: jquery.cycle.min.js  jquery.ui.min.js  nicEdit.js
