name:              bioSpace
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Chetan Taralekar
maintainer:        Chetan Taralekar
synopsis:          web app for bio space/labs
description:       Provides calendar, blogs, profiles, projects
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://bioSpace.genspace.org

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   BioSpace
                     Model
                     Settings
                     StaticFiles
                     Handler.Commons
                     Fields.ImageUpload
                     Fields.Users
                     Handler.Root
                     Handler.Dashboard
                     Handler.Profile
                     Handler.Project
                     Handler.Wiki
                     Handler.Event

executable         bioSpace
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/bioSpace.hs
    hs-source-dirs: ., config

    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.8     && < 0.9
                 , yesod-auth   >= 0.6
                 , yesod-static
                 , yesod-form
                 , mime-mail
                 , wai-extra	  
                 , wai-handler-fastcgi
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-template
                 , persistent-sqlite >= 0.5 && < 0.6
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
                 , time
                 , timezone-series
                 , timezone-olson
                 , filepath
                 , old-locale
                 , containers
                 , gd   >= 3000 && < 4000
                 , feed < 1
                 , HTTP >= 4000 && < 5000
                 , network >= 2 && < 3
